--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     body {
             font-family: 'Poppins';
             font-size:15px;
-
+          width:100%;
+          overflow-x: hidden;
            background-color: rgb(205, 209, 209);
         }
        
