--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>   
     body {
+        margin: 0; /* Remove default margin */
+  padding: 0;
             font-family: 'Poppins';
             font-size:15px;
           width:100%;
